Update ProductService