@@ -1,7 +1,9 @@
 package dp.ms.productservice.service;
 
+import dp.ms.productservice.dto.ProductDTO;
 import dp.ms.productservice.dto.ProductRequest;
-import dp.ms.productservice.dto.ProductResponse;
+import dp.ms.productservice.exception.ProductCreationException;
+import dp.ms.productservice.exception.ProductNotFoundException;
 import dp.ms.productservice.mappers.ProductMapper;
 import dp.ms.productservice.model.Product;
 import dp.ms.productservice.repositories.ProductRepository;
@@ -10,7 +12,7 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.UUID;
 
 @Service
 @RequiredArgsConstructor
@@ -18,22 +20,33 @@ import java.util.stream.Collectors;
 public class ProductService {
     private final ProductRepository productRepository;
     private final ProductMapper productMapper;
-    public void createProduct(ProductRequest productRequest) {
-        Product product = Product.builder()
-                .name(productRequest.getName())
-                .description(productRequest.getDescription())
-                .price(productRequest.getPrice())
-                .build();
-        Product savedProduct = productRepository.save(product);
-
-        log.info("Product with id - {} is saved.", savedProduct.getId());
+    public ProductDTO createProduct(ProductRequest productRequest) {
+        try {
+            Product product = Product.builder()
+                    .name(productRequest.getName())
+                    .description(productRequest.getDescription())
+                    .price(productRequest.getPrice())
+                    .build();
+            Product savedProduct = productRepository.save(product);
+            log.info("Product with id - {} is saved.", savedProduct.getId());
+            return productMapper.productToProductDTO(savedProduct);
+        } catch (Exception ex){
+            throw new ProductCreationException("Failed to create new product: " + ex.getMessage());
+        }
     }
 
-    public List<ProductResponse> getAllProducts() {
+    public List<ProductDTO> getAllProducts() {
         log.info("Get all products method called");
         return productRepository.findAll()
                 .stream()
-                .map(productMapper::productToProductResponse)
-                .collect(Collectors.toList());
+                .map(productMapper::productToProductDTO)
+                .toList();
+    }
+
+    public void deleteProduct(UUID productId) {
+        if (!productRepository.existsById(productId)) {
+            throw new ProductNotFoundException(productId.toString());
+        }
+        productRepository.deleteById(productId);
     }
 }
